# Debate

./: README.md
backend/: .gitignore  Cargo.toml  Rocket.toml  config.yaml  database.db
backend/src/: config.rs  main.rs
backend/src/database/: messages.rs  mod.rs  users.rs
backend/src/routes/: login.rs  message.rs  mod.rs  signup.rs
backend/src/routes/get/: message_stream.rs  status.rs
backend/src/routes/post/: login.rs  message.rs  signup.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts.timestamp-1713036856672-c02c7aead3693.mjs
frontend/src/: App.svelte  styles.css  types.d.ts  types.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src-tauri/src/account/: login.rs  signup.rs
frontend/src-tauri/src/config/: config.rs
frontend/src-tauri/src/misc/: hash.rs  status.rs
frontend/src/components/Channels/: Channels.svelte
frontend/src/components/Chat/: Chat.svelte  MessageBar.svelte
frontend/src/components/Hubs/: Hubs.svelte
frontend/src/components/Login/: login.svelte
frontend/src/components/Signup/: Signup.svelte
frontend/src/components/Users/: Users.svelte
mutual_objects/: Cargo.toml  gentypes.py
mutual_objects/bindings/: LoginRequest.ts  Message.ts  User.ts
mutual_objects/src/: functions.rs  lib.rs  types.rs
