[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rocket = { version = "0.5.0", features = ["json"] }
tokio = "1.37.0"
serde = "1.0.197"
rand = "0.8.5"
