[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rocket = { version = "0.5.0", features = ["json"] }
tokio = "1.37.0"
serde = "1.0.197"
rand = "0.8.5"
which = "6.0.1"
lazy_static = "1.4.0"
serde_yaml = "0.9.34"
surrealdb = { version = "1.3.1", features = ["protocol-http"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
mutual_types = { path = "../mutual_objects" }
log = "0.4"
pretty_env_logger = "0.5.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.12"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
